Update code to Java 11 and clean up